updated mobile auth
